<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>ch.scaille</groupId>
		<artifactId>skylib-starter-parent</artifactId>
		<version>0.0.1-SNAPSHOT</version>
		<relativePath/>
	</parent>

	<groupId>ch.scaille.dataflowmgr</groupId>
	<artifactId>data-flow-manager</artifactId>
	<version>${revision}</version>
	<packaging>pom</packaging>

	<name>data-flow-manager</name>

	<modules>
		<module>model</module>
		<module>generator</module>
		<module>examples</module>
		<module>annotations</module>
	</modules>

	<properties>
		<revision>0.0.1-SNAPSHOT</revision>
		<data-flow-manager-version>${revision}</data-flow-manager-version>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>ch.scaille</groupId>
				<artifactId>lib-utils</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>ch.scaille.dataflowmgr</groupId>
				<artifactId>data-flow-model</artifactId>
				<version>${data-flow-manager-version}</version>
			</dependency>
			<dependency>
				<groupId>ch.scaille.dataflowmgr</groupId>
				<artifactId>data-flow-generator</artifactId>
				<version>${data-flow-manager-version}</version>
			</dependency>
			<dependency>
				<groupId>ch.scaille.dataflowmgr</groupId>
				<artifactId>data-flow-annotations</artifactId>
				<version>${data-flow-manager-version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>ch.scaille</groupId>
			<artifactId>lib-testing-core</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

</project>